--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -2,9 +2,14 @@
   "name": "hydra-server-nodejs",
   "version": "1.0.0-alpha.0",
   "description": "Hydra Nodjs Server",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node ./src/index.js"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "dist/*"
+    ]
   },
   "keywords": [],
   "author": "",
