--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -4,7 +4,7 @@
   "description": "Hydra Nodjs Server",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start": "cross-env NODE_ENV=development node ./src/bin/bootstrap.js"
   },
   "nodemonConfig": {
     "ignore": [
@@ -16,5 +16,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
