--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -4,7 +4,7 @@
   "description": "Hydra Nodjs Server",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node ./src/bin/bootstrap.js"
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/bin/bootstrap.js"
   },
   "nodemonConfig": {
     "ignore": [
@@ -15,9 +15,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "core-js": "^3.36.0",
+    "express": "^4.18.2",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.23.9",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.0.3"
   }
 }
