--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -4,7 +4,10 @@
   "description": "Hydra Nodjs Server",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/bin/bootstrap.js"
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/bin/bootstrap.js",
+    "lint": "eslint 'src/**/*.js'",
+    "lint:fix": "yarn lint -- --fix",
+    "format": "prettier --write 'src/**/*.js'"
   },
   "nodemonConfig": {
     "ignore": [
@@ -26,6 +29,13 @@
     "@babel/preset-env": "^7.23.9",
     "babel-plugin-module-resolver": "^5.0.0",
     "cross-env": "^7.0.3",
-    "nodemon": "^3.0.3"
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5"
   }
 }
