--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "core-js": "^3.36.0",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "regenerator-runtime": "^0.14.1"
   },
