refactor application parameters

--- a/packages/server-nodejs/.babelrc
+++ b/packages/server-nodejs/.babelrc
@@ -5,6 +5,7 @@
       "module-resolver",
       {
         "alias": {
+          "core": "./src/core",
           "utils": "./src/utils"
         }
       }
