--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0",
     "regenerator-runtime": "^0.14.1",
     "xss-clean": "^0.1.4"
