--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -34,6 +34,7 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.2.0",
     "mongoose-unique-validator": "^5.0.0",
     "morgan": "^1.10.0",
