--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -11,10 +11,11 @@
   ],
   "scripts": {
     "prepare": "npm run build",
-    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
-    "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
     "build": "tsc && vite build",
     "build:watch": "tsc && vite build --watch",
+    "start:dev": "yarn build:watch",
+    "lint": "eslint . --ext .ts,.tsx --ignore-path .gitignore --fix",
+    "format": "prettier --write --parser typescript '**/*.{ts,tsx}'",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -22,29 +23,9 @@
     "registry": "https://npm.pkg.github.com/@hydra-js"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.61",
-    "@types/testing-library__jest-dom": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
     "clsx": "^2.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.8.0",
-    "jsdom": "^24.0.0",
-    "prettier": "^3.2.5",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "styled-components": "^6.1.8",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
-    "vite-plugin-dts": "^3.7.3",
-    "vitest": "^1.3.1"
+    "styled-components": "^6.1.8"
   },
   "peerDependencies": {
     "react": "^18.2.0"
@@ -57,7 +38,26 @@
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
     "@storybook/test": "^7.6.17",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.61",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "jsdom": "^24.0.0",
+    "prettier": "^3.2.5",
     "react-dom": "^18.2.0",
-    "storybook": "^7.6.17"
+    "storybook": "^7.6.17",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.4",
+    "vite-plugin-dts": "^3.7.3",
+    "vitest": "^1.3.1"
   }
 }
