--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,11 +13,6 @@
   "files": [
     "dist"
   ],
-  "author": {
-    "name": "",
-    "email": "",
-    "url": ""
-  },
   "scripts": {
     "init:husky": "husky install",
     "documentation:create": "npx readme-md-generator -y",
@@ -40,19 +35,32 @@
     "commitlint": "npx commitlint --edit",
     "lint-staged": "npx lint-staged",
     "prepublishOnly": "npm run build",
-    "quality-check": "npm run format && npm run lint && npm run test"
+    "quality-check": "npm run format && npm run lint && npm run test",
+    "start:dev": "yarn build:bundle -- --watch"
   },
   "repository": {
     "url": ""
   },
   "keywords": [],
-  "bugs": {
-    "url": ""
-  },
   "homepage": "",
   "dependencies": {
     "@babel/runtime-corejs3": "^7.22.11",
-    "core-js": "^3.32.1"
+    "console-stamp": "^3.1.2",
+    "core-js": "^3.32.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.2.0",
+    "mongoose-unique-validator": "^5.0.0",
+    "morgan": "^1.10.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
