--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "packages/*"
   ],
   "scripts": {
-    "start:dev": "concurrently 'yarn start:server' 'yarn start:console' 'yarn start:pkg:react:watch'",
+    "start:dev": "concurrently 'yarn start:server' 'yarn start:console'",
+    "start:dev:watch": "concurrently 'yarn start:server' 'yarn start:console' 'yarn start:pkg:react:watch'",
     "start:pkg:react:watch": "cd packages/react && yarn start:dev",
     "start:server": "cd packages/server-nodejs && yarn start",
     "start:console": "cd packages/console && yarn dev"
