--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -20,6 +20,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "types": ["jest"],
 
     /* Absolute Imports */
     "baseUrl": ".",
