--- a/packages/server-nodejs/.gitignore
+++ b/packages/server-nodejs/.gitignore
@@ -1,6 +1,14 @@
+# Ignore node_modules directory
+node_modules/
+
+# Ignore compiled TypeScript files
 dist
-node_modules
-yarn-error.log
-package-lock.json
+
+# Ignore environment-specific files
 .env
+
+# Ignore any log files
+*.log
+
+# Ignore macOS system files
 .DS_Store
