--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -4,56 +4,39 @@
   "description": "Hydra Nodjs Server",
   "main": "./dist/index.js",
   "scripts": {
-    "start:dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js",
-    "prestart": "yarn build",
-    "start": "cross-env NODE_ENV=production node ./dist/index.js",
-    "debug": "cross-env NODE_ENV=debug nodemon --inspect --exec babel-node ./src/index.js",
-    "prebuild": "rm -rf dist",
-    "build": "babel ./src --out-dir dist --copy-files",
-    "lint": "eslint 'src/**/*.js'",
-    "lint:fix": "yarn lint -- --fix",
-    "format": "prettier --write 'src/**/*.js'"
+    "prestart": "npm run build",
+    "start": "node ./dist/index.js",
+    "start:dev": "nodemon --exec ts-node ./index.js",
+    "prebuild": "rm -rf ./dist",
+    "build": "tsc",
+    "postbuild": "cp -r views dist/ && cp -r public dist/"
   },
+  "license": "UNLICENSED",
   "nodemonConfig": {
     "ignore": [
       "dist/*"
     ]
   },
-  "license": "UNLICENSED",
   "dependencies": {
-    "@hydra-js/core": "^1.0.0-alpha.0",
-    "console-stamp": "^3.1.2",
-    "core-js": "^3.36.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.4",
-    "express": "^4.18.2",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "hpp": "^0.2.3",
-    "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "mongoose": "^8.2.0",
-    "mongoose-unique-validator": "^5.0.0",
-    "morgan": "^1.10.0",
-    "regenerator-runtime": "^0.14.1",
-    "xss-clean": "^0.1.4"
+    "express": "^4.19.2",
+    "handlebars": "^4.7.8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.9",
-    "@babel/core": "^7.23.9",
-    "@babel/node": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-babel-module": "^5.3.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
+    "@babel/register": "^7.23.7",
+    "@types/babel__register": "^7.17.3",
+    "@types/express": "^4.17.21",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "babel-cli": "^6.26.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   }
 }
