--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "handlebars": "^4.7.8",
     "react": "^18.3.1",
