--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -9,15 +9,14 @@
     "start:dev": "nodemon --exec ts-node ./index.js",
     "prebuild": "rm -rf ./dist",
     "build": "tsc",
-    "postbuild": "cp -r views dist/ && cp -r public dist/"
+    "postbuild": "cp -r views dist/ && cp -r public dist/",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
+    "lint:fix": "yarn lint -- --fix",
+    "format": "prettier . --write"
   },
-  "license": "UNLICENSED",
-  "nodemonConfig": {
-    "ignore": [
-      "dist/*"
-    ]
-  },
+  "license": "MIT",
   "dependencies": {
+    "@babel/register": "^7.23.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -30,13 +29,19 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
-    "@babel/register": "^7.23.7",
     "@types/babel__register": "^7.17.3",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "babel-cli": "^6.26.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-babel-module": "^5.3.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
