--- a/packages/server-nodejs/package.json
+++ b/packages/server-nodejs/package.json
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
     "handlebars": "^4.7.8",
+    "mongoose": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
