--- a/packages/hydra-cli/.gitignore
+++ b/packages/hydra-cli/.gitignore
@@ -1,2 +1,16 @@
-.vscode
-node_modules/
+# Node.js dependencies
+node_modules
+npm-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# macOS files
+.DS_Store
